--- a/contents/aire_guru/evaluation.tex
+++ b/contents/aire_guru/evaluation.tex
@@ -1,25 +1,22 @@
 \subsection*{Evaluation}
 
-The system has been successfully tested with 14 subject in the Spanish city of Málaga. The survey showed a high degree of satisfaction, 
-particularly regarding the clarity and completeness of the the information and analysis.\\
+The system has been successfully tested with 14 subject in the Spanish city of Málaga.
+The survey showed a high degree of satisfaction, particularly regarding the clarity and completeness of the the information and analysis,
+useability, interpretability, and depth of information presented.\\
 
-After a week, test users completed a survey that contained questions about how understandable the information was
-and how useable it was. Additionally, respondants could make their own comments.\\
+After a week, test users completed a survey that contained questions about how understandable the information was and how useable it was
+Additionally, respondants could make their own comments.\\
 
-Most of the respondents agreed that the functionality they liked the most, was to see the air quality index actually in the
-map, and suggested increasing the number of zones.
-92 \% of the respondents found the information useful and complete, and 71.43 \% answered that they also found it
-understandable.\\
+Most of the respondents agreed that the functionality they liked the most, was to see the air quality index actually in the map, and suggested increasing the number of zones.
+92 \% of the respondents found the information useful and complete, and 72 \% answered that they also found it understandable.\\
 
-More than half of the respondents admit that they did not know the meaning of the air quality index, but after
-using the website, they now understand it.\\
+More than half of the respondents admit that they did not know the meaning of the air quality index, but after using the website, they now understand it.\\
 
 Regarding their interest about air quality, half of them indicated that they had never sought information about it,
 only two were previously well informed, and one of them marked the 'other' option and specified that using the application had aroused their interest.
 In addition, four of them indicated that, thanks to the website, they have now discovered they have a medical condition that is affected by air quality.\\
 
-Among the test subjects, a greater awareness of pollution has been recognized, and they now show more interest in the
-air quality in the city and its possible effects on their health.
+Among the test subjects, a greater awareness of pollution has been recognized, and they now show more interest in the air quality in the city and its possible effects on their health.
 
 \begin{figure}[ht]
    \centering
@@ -29,4 +26,4 @@ air quality in the city and its possible effects on their health.
 
 \begin{center}
    \bf Figure 2.3. Aire Guru. Survey results\\
-   \end{center}
+\end{center}
