--- a/contents/compelling/_section.tex
+++ b/contents/compelling/_section.tex
@@ -1,5 +1,9 @@
 \section{Compelling}
 
+To retain your users you need to bring to bear all your powers of seduction.
+Users are more likely to expend time and energy on something they find attractive and compelling.
+You should design your interface and data representations with this in mind, to attract users and maximize their engagement.\\
+
 In this section we consider six questions related to making your content compelling, to attract and keep your users:
 
 \begin{itemize}
