--- a/contents/compelling/make_sure_your_data_is_reliable.tex
+++ b/contents/compelling/make_sure_your_data_is_reliable.tex
@@ -1,8 +1,7 @@
 \subsection{Make sure your data is reliable}
 
 It is essential that the credibility of your dataset be impeccable. The source of the data must be reliable.
-Usually, in the description of the data, a section should be included where the origin of the dataset is explained.
-This allows interested users, and third parties, to verify you data integrity to their own satisfaction. \\
+Usually, in the description of the data, a section should be included where the origin of the dataset is explained.\\
 
 The quality of the dataset can be measured according to the following characteristics of the values of the fields:
 
