--- a/contents/preliminaries/know_your_user.tex
+++ b/contents/preliminaries/know_your_user.tex
@@ -28,11 +28,12 @@ and/or surveys.\\
 
 \subsubsection*{In the context of Aire Guru \ldots}
 
-Air Guru is aimed at the general population, therefore it's appropriate to present fully analysed information in the simplest way possible.
+Air Guru is aimed at the general population, therefore it is appropriate to present fully analysed information in the simplest way possible.
 In addition, we pay special attention to users who may have a
 disease or medical condition, caused or affected by air pollution.\\
 
-During our market study, we found that many existing tools offer information about air pollution in real time, but have the following deficiencies:
+We mentioned previous that we discovered a number of deficiencies in existing websites. In addition the following specific gaps in functionality were discovered:
+
 \begin{itemize}
     \item No ability to track exposure over time. We are interested to know the level of pullution we are exposed over the long term, not only at a specific instant.
     \item Overly complicated presentation, suitable more for further analysis than presentation to the general public.
@@ -44,7 +45,6 @@ user behavior, how many pages they access, and how long they stay on each page.
 After testing, we surveyed the users to measure not only the level of overall satisfaction with the website,
 but also to verify the utility and determine if the user was able to achieve their objective.\\
 
-The survey gave us positive evaluations regarding the useability, interpretability, and depth of information reported. 
 Thanks to Aire Guru, users noticed about medical conditions with the potential to affect them personally, that could be caused or made worse by air pollution.\\
 
 \begin{figure}[ht]
