--- a/contents/relevant/_section.tex
+++ b/contents/relevant/_section.tex
@@ -1,5 +1,7 @@
 \section{Relevant}
 
+A good representation of the data is not about showing every detail. What is helpful, is showing the user what is relevant and neccessary for their purpose.
+
 In this section we consider three questions related to making sure your data is relevant to your users:
 
 \begin{itemize}
