--- a/contents/relevant/personalize_the_data_for_each_user.tex
+++ b/contents/relevant/personalize_the_data_for_each_user.tex
@@ -3,20 +3,22 @@
 The most powerful technique to ensure that your data is relevent to your users, is to customize it 
 for each user. Obviously there is a tradeoff here because you need some information about the user,
 but if the information is transient i.e. not stored on your server, but only on the browser, then this
-is not an issue. A good example of this transient customisation is filtering - when the user enters
-their details, you can filter the data to show information specific to those details.\\
+is not an issue. A good example of this transient customisation is persistent filtering - when the user enters
+their details, you can filter the data to show information specific to those details,
+such as automatically pivoting or limiting the data to the user's age, gender, location, specific interests, economic circumstance, physical chacteristics etc.\\
 
 It is possible to do very sophisticated customisation using a single page web application, and it is
 even possible to store data between visits, on the browser, avoiding security and information collection issues that
 we discuss elsewhere. \\
 
-Even when it is not possible to fully customize the data, you can look for common points in subgroups of
-users. You have to know these in advance, and hence you must have demographic information. \\
+Even when it is not possible to fully customize the data, you can look for shared characteristics in subgroups of
+users and provide pre-determined customisation, focusing, and filtering options.
+You have to know these in advance, and hence you must have demographic information. \\
 
 \subsubsection*{Suggested strategies} 
 
 \begin{itemize}
-  \item Consider the particular user, and find a way to filter the results that are specifically adapted to their particular moment and place.
+  \item Consider the particular user, and find a way to filter the results that are specifically adapted to their particular moment, place and circumstance.
 \end{itemize}
 
 \subsubsection*{In the context of Aire Guru \ldots}
