--- a/contents/frontmatter/_section.tex
+++ b/contents/frontmatter/_section.tex
@@ -14,6 +14,7 @@
 
 \begin{keyword}
 Air Quality Index \sep Pollution \sep Monitoring \sep Visualization \sep Analysis \sep Big Data
+\sep Accessible \sep Relevant \sep Compelling
 \end{keyword}
 
 \end{frontmatter}
