--- a/contents/conclusion/_section.tex
+++ b/contents/conclusion/_section.tex
@@ -1,10 +1,12 @@
 \section{General Comments}
 
-En este capitulo se han visto los puntos claves para poder mostrar la informacion de una manera accessible,
-relevante y atractiva al usuario medio. Vemos que algunos puntos se han aplicado satisfactoriamente en la herramienta
-Aire Guru y otros estan aun por aplicar.
-[Recapitulacion]
-Los puntos que se han cumplido satisfactoriamente son los siguientes
-Como trabajo futuro se plantea...
+Of course, every project is individual, with its own particular circumstance and constraints. Not all
+the principles we have outlined will apply equally to every project. In any case, the principles are
+quite general, but we think they provide a reasonable framework to help bring datasources to the public
+and maximize their effectiveness.\\
 
-Aire Guru esta disponible.....
+Aire Guru is a work in progress, and is certainly not perfect. Nor does it yet completely follow the principles
+that we have given in this chapter.\\
+
+In the final section you will find a reading list, organised according to these principles, that you
+can use to go deeper into these concepts.\\
